--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Coursera Assignments</title>
-	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<meta charset="UTF-8">
+	<title>Photo Gallery</title>
+	<link rel="stylesheet" href="../css/gallery.css">
+	<script src = "../js/gallery.js"></script>
 </head>
 <body>
 	<h1 id="heading">Interactivity With JavaScript</h1>
